Adding Accounts module

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -93,6 +93,11 @@
     <script src="/src/client/app/avengers/avengers.module.js"></script>
     <script src="/src/client/app/avengers/config.route.js"></script>
     <script src="/src/client/app/avengers/avengers.js"></script>
+
+    <!--accounts module-->
+    <script src="/src/client/app/accounts/accounts.module.js"></script>
+    <script src="/src/client/app/accounts/config.route.js"></script>
+    <script src="/src/client/app/accounts/accounts.js"></script>
     <!-- endinject -->
 </body>
 </html>
