--- a/src/client/index.html
+++ b/src/client/index.html
@@ -30,7 +30,7 @@
         <div id="splash-page" data-ng-show="false">
             <div class="page-splash">
                 <div class="page-splash-message">
-                    Angular Modular Demo
+                    FFP Angular Finances
                 </div>
                 <div class="progress progress-striped active page-progress-bar">
                     <div class="bar"></div>
@@ -49,6 +49,7 @@
     <script src="/bower_components/toastr/toastr.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
     <script src="/bower_components/extras.angular.plus/ngplus-overlay.js"></script>
+    <script src="/bower_components/angular-translate/angular-translate.min.js"></script>
     <!-- endinject -->
 
 
@@ -69,6 +70,7 @@
     <script src="/src/client/app/core/core.module.js"></script>
     <script src="/src/client/app/core/constants.js"></script>
     <script src="/src/client/app/core/config.js"></script>
+    <script src="/src/client/app/core/i18n.config.js"></script>
     <script src="/src/client/app/core/dataservice.js"></script>
 
     <!-- layout -->
