- Added 'range' filter

--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -34,13 +34,15 @@
                             <table class="table table-condensed table-striped">
                                 <thead>
                                     <tr>
-                                        <th data-ng-repeat="n in []">{{ 'DASHBOARD.WIDGET_1.COLS.'+$index | translate }}</th>
+                                        <th data-ng-repeat="n in [] | range:12">
+                                            {{ 'DASHBOARD.WIDGET_1.COLS.'+$index | translate }}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr data-ng-repeat="concept in vm.concepts">
                                         <td>{{ concept.name }}</td>
-                                        <td data-ng-repeat="cv in concept.values | limitTo:12 track by $index">{{ cv | currency }}</td>
+                                        <td data-ng-repeat="cv in concept.values | limitTo:12 track by $index">
+                                            {{ cv | currency }}</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -52,7 +54,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="widget wlightblue">
-                        <div data-cc-widget-header title="{{ 'DASHBOARD.WIDGET_'+2+'.TITLE' | translate }}"
+                        <div data-cc-widget-header title="{{ 'DASHBOARD.WIDGET_2.TITLE' | translate }}"
                              allow-collapse="true"></div>
                         <div class="widget-content text-center text-info">
                             <!--<small>{{vm.news.description}}</small>-->
