--- a/src/client/index.html
+++ b/src/client/index.html
@@ -65,6 +65,7 @@
     <script src="/src/client/app/blocks/logger/logger.js"></script>
     <script src="/src/client/app/blocks/router/router.module.js"></script>
     <script src="/src/client/app/blocks/router/routehelper.js"></script>
+    <script src="/src/client/app/blocks/filters/range.module.js"></script>
 
     <!-- core module -->
     <script src="/src/client/app/core/core.module.js"></script>
