--- a/src/client/index.html
+++ b/src/client/index.html
@@ -49,6 +49,7 @@
     <script src="/bower_components/toastr/toastr.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
     <script src="/bower_components/extras.angular.plus/ngplus-overlay.js"></script>
+    <script src="/bower_components/jaydata/release/jaydata.min.js"></script>
     <script src="/bower_components/angular-translate/angular-translate.min.js"></script>
     <!-- endinject -->
 
@@ -96,11 +97,6 @@
     <script src="/src/client/app/avengers/avengers.module.js"></script>
     <script src="/src/client/app/avengers/config.route.js"></script>
     <script src="/src/client/app/avengers/avengers.js"></script>
-
-    <!--accounts module-->
-    <script src="/src/client/app/accounts/accounts.module.js"></script>
-    <script src="/src/client/app/accounts/config.route.js"></script>
-    <script src="/src/client/app/accounts/accounts.js"></script>
     <!-- endinject -->
 </body>
 </html>
