--- a/src/client/index.html
+++ b/src/client/index.html
@@ -46,6 +46,7 @@
     <script src="/bower_components/angular-route/angular-route.js"></script>
     <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/bower_components/underscore/underscore-min.js"></script>
     <script src="/bower_components/toastr/toastr.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
     <script src="/bower_components/extras.angular.plus/ngplus-overlay.js"></script>
@@ -66,6 +67,8 @@
     <script src="/src/client/app/blocks/logger/logger.js"></script>
     <script src="/src/client/app/blocks/router/router.module.js"></script>
     <script src="/src/client/app/blocks/router/routehelper.js"></script>
+    <script src="/src/client/app/blocks/vendors/vendors.module.js"></script>
+    <script src="/src/client/app/blocks/vendors/vendors.js"></script>
     <script src="/src/client/app/blocks/filters/range.module.js"></script>
 
     <!-- core module -->
